2006-05-11  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>

	PR middle-end/27384
	* fold-const.c (size_binop): Move sanity check for arguments to
	the beginning of the function.

	PR middle-end/27488
	* fold-const.c (tree_expr_nonnegative_p): Return early on invalid
	expression.

2006-05-11  Richard Guenther  <rguenther@suse.de>

	PR middle-end/27529
	* fold-const.c (fold_unary): Handle intermediate conversion
	to a pointer type like intermediate conversion to an integer
	type in folding of (T1)(T2)var to var.
	Match the code to the comment in the final conversion for
	(T1)(T2)var to (T1)var regarding to type precision.  Rather
	than disallow T1 being of pointer type, assert that both T1
	and var are of pointer type or not.  Make sure not to fall
	over the frontends lazyness wrt array to pointer decay though.

2006-05-10  Richard Earnshaw  <rearnsha@arm.com>

	* arm.c (arm_struct_value_rtx): Delete.
	(TARGET_STRUCT_VALUE_RTX): Use the default definition.
	(arm_init_cumulative_args): Always initialize nregs to zero.

2006-05-10  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/27532
	* tree-object-size.c (plus_expr_object_size): Fix typo.

2006-05-10  Kazu Hirata  <kazu@codesourcery.com>

	PR target/24949
	* config/m68k/m68k.md (ashrdi_const32, ashrdi_const32_mem,
	ashrdi_const, ashrdi3): Use a scratch register.

2006-05-10  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/27302
	* fold-const.c (operand_equal_p): For two comparisons,
	try comparison of one comparison code swapped if that yields
	the same code.

2006-05-10  Ben Elliston  <bje@au.ibm.com>

	* tree-pretty-print.c (pretty_print_string): No need to handle
	'\0' as a special character.

	* tree.h: Include "hashtab.h".
	(iterative_hash_expr): Use hashval_t in its prototype.
	* Makefile.in (TREE_H): Add $(HASHTAB_H).

2006-05-09  Steve Ellcey  <sje@cup.hp.com>

	PR bootstrap/26872
	* config.gcc (hppa[12]*-*-hpux10*): Set gas to yes.
	(hppa*64*-*-hpux11*): Ditto.