@@ -219,9 +219,11 @@ decide_is_function_needed (struct cgraph_node *node, tree decl)
      COMDAT functions that must be output only when they are needed. 
 
      When not optimizing, also output the static functions. (see
-     PR25962)
+     PR25962), but don't do so for always_inline functions.
      */
-  if (((TREE_PUBLIC (decl) || !optimize) && !flag_whole_program)
+  if (((TREE_PUBLIC (decl)
+	|| (!optimize && !node->local.disregard_inline_limits))
+      && !flag_whole_program)
       && !DECL_COMDAT (decl) && !DECL_EXTERNAL (decl))
     return true;
 
