@@ -1,3 +1,8 @@
+2006-05-11  Jan Hubicka  <jh@suse.cz>
+
+	* cgraphunit.c (decide_is_function_needed): Don't force always_inline
+	to be output at -O0.
+
 2006-05-11  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
 
 	PR middle-end/27384
